[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/examples/common-support/keyboard-hud/keyboard-hud.gd" type="Script" id=1]
[ext_resource path="res://scenes/examples/common-support/keyboard-hud/assets/keyboard-up-32x32.png" type="Texture" id=2]
[ext_resource path="res://scenes/examples/common-support/keyboard-hud/assets/keyboard-right-32x32.png" type="Texture" id=3]
[ext_resource path="res://scenes/examples/common-support/keyboard-hud/assets/keyboard-left-32x32.png" type="Texture" id=4]
[ext_resource path="res://scenes/examples/common-support/keyboard-hud/assets/keyboard-down-32x32.png" type="Texture" id=5]

[node name="KeyboardHud" type="Node2D"]
position = Vector2( 4.89995, 28.9542 )
script = ExtResource( 1 )

[node name="LeftButton" type="TextureButton" parent="."]
margin_right = 32.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )
stretch_mode = 3

[node name="RightButton" type="TextureButton" parent="."]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpButton" type="TextureButton" parent="."]
margin_left = 32.0
margin_top = -29.0
margin_right = 64.0
margin_bottom = 3.0
texture_normal = ExtResource( 2 )

[node name="DownButton" type="TextureButton" parent="."]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 33.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_up" from="LeftButton" to="." method="_on_LeftButton_button_up"]
[connection signal="button_down" from="RightButton" to="." method="_on_RightButton_button_down"]
[connection signal="button_up" from="RightButton" to="." method="_on_RightButton_button_up"]
